Revert "chore: update ci to use docker bake"
This reverts commit 7b54484dfdf5ab3d258d4d07dc3a8d0d5ac3d730.

--- a/.github/actions/load-image/action.yaml
+++ b/.github/actions/load-image/action.yaml
@@ -13,6 +13,5 @@ runs:
               name: ${{ inputs.name }}
               path: /tmp
         - run: |
-              docker load --input /tmp/fpm.tar
-              docker load --input /tmp/web.tar
+              docker load --input /tmp/${{ inputs.name }}.tar
           shell: bash
