--- a/.github/actions/start-stack/action.yaml
+++ b/.github/actions/start-stack/action.yaml
@@ -5,6 +5,11 @@ runs:
     steps:
         - uses: actions/checkout@v3
         - uses: ./.github/actions/load-image
+          with:
+              name: fpm
+        - uses: ./.github/actions/load-image
+          with:
+              name: web
         - run: |
               cp backend/.env.example .env
               cp docker-compose.ci.yaml docker-compose.override.yaml
