--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -12,10 +12,9 @@ runs:
           id: tagger
           shell: bash
           run: |
-              git fetch --prune --unshallow
-              echo "VERSION=$(git describe --tags)" >> ${GITHUB_ENV}
-              echo "VERSION_URL=https://github.com/MESH-Research/CCR/commits/${GITHUB_SHA}" >> ${GITHUB_ENV}
-              echo "VERSION_DATE=$(git show -s --format=%cI ${GITHUB_SHA})" >> ${GITHUB_ENV}
+              echo "version=$(git describe --tags)" >> $GITHUB_OUTPUT
+              echo "url=https://github.com/MESH-Research/CCR/commits/${GITHUB_SHA}" >> $GITHUB_OUTPUT
+              echo "date=$(git show -s --format=%cI ${GITHUB_SHA})" >> $GITHUB_OUTPUT
         - uses: docker/setup-buildx-action@v2
         - name: Docker meta (FPM)
           id: docker-meta-fpm
