Revert "reenable gha cache, add annotation"
This reverts commit 172eb3966b5431d9f96bc6f02bd11b2e5c4c942e.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,11 @@
 FROM --platform=$BUILDPLATFORM node:16-alpine as build-stage
 WORKDIR /app
+COPY . ./
 
 ARG VERSION
 ARG VERSION_URL
 ARG VERSION_DATE
-COPY package.json yarn.lock ./
-RUN yarn
-COPY . .
-RUN yarn build
+RUN yarn && yarn build
 
 FROM nginx:latest
 
