--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -22,6 +22,7 @@ runs:
           uses: docker/metadata-action@v4
           with:
             images: |
+              pilcrow/fpm:latest
               ghcr.io/${{ github.repository_owner }}/pilcrow/fpm
             tags: |
               type=ref,event=pr
@@ -34,6 +35,7 @@ runs:
           uses: docker/metadata-action@v4
           with:
             images: |
+              pilcrow/web:latest
               ghcr.io/${{ github.repository_owner }}/pilcrow/web
             tags: |
               type=ref,event=pr
