--- a/.github/actions/load-image/action.yaml
+++ b/.github/actions/load-image/action.yaml
@@ -1,11 +1,16 @@
 name: "Load Image Artifact"
+inputs:
+    name:
+        description: "The name of the artifact to load."
+        required: true
+        default: "fpm"
 runs:
     using: "composite"
     steps:
         - uses: actions/checkout@v3
         - uses: actions/download-artifact@v3
           with:
-              name: Docker Images
+              name: ${{ inputs.name }}
               path: /tmp
         - run: |
               docker load --input /tmp/fpm.tar
