--- a/.github/actions/load-image/action.yaml
+++ b/.github/actions/load-image/action.yaml
@@ -10,4 +10,5 @@ runs:
         - run: |
               docker load --input /tmp/fpm.tar.gz
               docker load --input /tmp/web.tar.gz
+              docker image ls
           shell: bash
