--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -16,8 +16,7 @@ runs:
               echo "VERSION=$(git describe --tags)" >> ${GITHUB_ENV}
               echo "VERSION_URL=https://github.com/MESH-Research/CCR/commits/${GITHUB_SHA}" >> ${GITHUB_ENV}
               echo "VERSION_DATE=$(git show -s --format=%cI ${GITHUB_SHA})" >> ${GITHUB_ENV}
-        - uses: docker/setup-qemu-action@v3
-        - uses: docker/setup-buildx-action@v3
+        - uses: docker/setup-buildx-action@v2
         - name: Docker meta (FPM)
           id: docker-meta-fpm
           uses: docker/metadata-action@v4
@@ -41,6 +40,7 @@ runs:
               type=semver,pattern={{version}}
               type=semver,pattern={{major}}.{{minor}}
               type=sha,enable=${{ github.event_name == 'push' }}
+              type=raw,value=pilcrow/web:latest
             bake-target: web
         - name: Build and push
           uses: docker/bake-action@v4
