--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -44,7 +44,7 @@ runs:
           uses: docker/bake-action@v4
           with:
             pull: true
-            targets: ${{ inputs.target }}
+            target: ${{ inputs.target }}
             files: |
               ./docker-bake.hcl
               ${{ steps.docker-meta-fpm.outputs.bake-file }}
