Revert "try to force using an existing image"
This reverts commit a00dae6219de47bcb0795a7cc29e02755ae6ca28.

--- a/.github/actions/load-image/action.yaml
+++ b/.github/actions/load-image/action.yaml
@@ -8,6 +8,6 @@ runs:
               name: Docker Images
               path: /tmp
         - run: |
-              docker load --input /tmp/fpm.tar.gz
-              docker load --input /tmp/web.tar.gz
+              docker load --input /tmp/fpm.tar
+              docker load --input /tmp/web.tar
           shell: bash
