Fetch repository id

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -144,7 +144,8 @@ jobs:
       - run: sudo apt install -y jq parallel
         shell: bash
       - run: |
-          ENVIRONS=$(gh api /repos/{owner}/{repo}/environments | jq -r ' .environments | .[] | .name ' |  parallel 'gh api /repositories/215870675/environments/{}/variables/TAG | jq "{environment: "\"{}\"", tag: .value}"' | jq  -s) ; echo $ENVIRONS
+          ID=$(gh api /repos/{owner}/{repo} -q '.id') ; echo $ID
+          ENVIRONS=$(gh api /repos/{owner}/{repo}/environments | jq -r ' .environments | .[] | .name ' |  parallel 'gh api /repositories/${ID}/environments/{}/variables/TAG | jq "{environment: "\"{}\"", tag: .value}"' | jq  -s) ; echo $ENVIRONS
           JSTAG=$(echo $TAGS | jq -R '.' | jq -s -c) ; echo $JSTAG
           echo MATCHED=$(echo $ENVIRONS | jq -r --argjson tags ${JSTAG} '.[] | .tag as $tag | select([$tags[] | test($tag)] | any) | .environment' ) >> $GITHUB_ENV
         shell: bash
