--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -143,7 +143,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: sudo apt install -y jq parallel
         shell: bash
-      - run: echo REPO_ID=$(gh api /repos/{owner}/{repo} -q '.id') >> ${GITHUB_ENV
+      - run: echo REPO_ID=$(gh api /repos/{owner}/{repo} -q '.id') >> ${GITHUB_ENV}
         shell: bash
       - run: |
           echo ENVIRONS=$(gh api /repos/{owner}/{repo}/environments | jq -r ' .environments | .[] | .name ' |  parallel 'gh api /repositories/${REPO_ID}/environments/{}/variables/TAG | jq "{environment: "\"{}\"", tag: (.value // empty)}"' | jq  -s) >> $GITHUB_ENV
