--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -148,7 +148,7 @@ jobs:
       - run: |
           echo ENVIRONS=$(gh api /repos/{owner}/{repo}/environments | jq -r ' .environments | .[] | .name ' |  parallel 'gh api /repositories/${REPO_ID}/environments/{}/variables/TAG | jq "{environment: "\"{}\"", tag: (.value // empty)}"' | jq  -s) >> $GITHUB_ENV
         shell: bash
-      - run: echo JSTAG=$(echo $TAGS | sed -e 's/^[ ]*//g' -e 's/[ ]*$//g' | jq -R | jq -sc) >> $GITHUB_ENV
+      - run: echo JSTAG=$(echo $TAGS | sed -e 's/^[ ]*//g' -e 's/[ ]*$//g' -e 's/\([a-zA-Z\.\/:0-9-]*\)/"\1"/g' | jq -sc) >> $GITHUB_ENV
         shell: bash
       - run: echo MATCHED=$(echo $ENVIRONS | jq -r --argjson tags ${JSTAG} '.[] | .tag as $tag | select([$tags[] | test($tag)] | any) | .environment' ) >> $GITHUB_ENV
         shell: bash
@@ -158,7 +158,7 @@ jobs:
             -f ref=${{ github.sha }} \
             -f environment="{}" \
             -F required_contexts\[\] \
-            -F transient_environment=true \
+            -F transient_environment=false \
             -F auto_merge=true \
             -F production_environment=false \
             -f payload="{\"version\": \"${{ needs.build-images.outputs.version }}\"}"'
