--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
     outputs:
       version: ${{ steps.build-image.outputs.version }}
       tags: ${{ steps.build-image.outputs.tags }}
-      tag_count: ${{ steps.build-image.outputs.tag_count }}}
+      tag_count: ${{ steps.build-image.outputs.tag_count }}
     steps:
       - uses: actions/checkout@v3
       - name: Login to Github Packages
