--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -143,7 +143,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          echo environments=$(gh api /repos/{owner}/{repo}/environments -q  '[] .environments | .[] | .name] ' ) >> $GITHUB_OUTPUT
+          echo environments=$(gh api /repos/{owner}/{repo}/environments -q  '[ .environments | .[] | .name ] ' ) >> $GITHUB_OUTPUT
         shell: bash
         id: matches
   deployments:
