--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,6 +152,7 @@ jobs:
       - environments
       - publish
     name: "Deploy"
+    environment: ${{ matrix.environment }}
     strategy:
       fail-fast: false
       matrix:
