--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,26 +64,26 @@ jobs:
         name: Run Unit Test
       - run: docker compose down
         name: Stop Stack
-  # e2e:
-  #   name: "E2E Test"
-  #   needs: [build-images]
-  #   uses: ./.github/workflows/do-test-e2e.yml
-  #   secrets: inherit
-  #   with:
-  #     version: ${{ needs.build-images.outputs.version }}
-  # lint-php:
-  #   name: PHP Lint
-  #   runs-on: ubuntu-20.04
-  #   defaults:
-  #     run:
-  #       working-directory: ./backend
-  #   steps:
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v3
-  #     - name: Install dependencies
-  #       run: composer install
-  #     - name: Check PHP
-  #       run: composer lint
+  e2e:
+    name: "E2E Test"
+    needs: [build-images]
+    uses: ./.github/workflows/do-test-e2e.yml
+    secrets: inherit
+    with:
+      version: ${{ needs.build-images.outputs.version }}
+  lint-php:
+    name: PHP Lint
+    runs-on: ubuntu-20.04
+    defaults:
+      run:
+        working-directory: ./backend
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: composer install
+      - name: Check PHP
+        run: composer lint
   lint-js:
     name: JS Lint
     runs-on: ubuntu-20.04
@@ -120,7 +120,7 @@ jobs:
   publish:
     name: "Publish (master branch only)"
     runs-on: ubuntu-20.04
-    needs: [build-images, backend-unit-test, client-unit-test]
+    needs: [build-images, backend-unit-test, client-unit-test, e2e]
     if: needs.build-images.outputs.tag_count > 1
     steps:
       - uses: actions/checkout@v3
