--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,7 +152,9 @@ jobs:
       - environments
       - publish
     name: "Deploy"
-    environment: ${{ matrix.environment }}
+    environment:
+      name:  ${{ matrix.environment }}
+      url: ${{ env.URL}}
     strategy:
       fail-fast: false
       matrix:
