--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -154,7 +154,7 @@ jobs:
     name: "Deploy"
     environment:
       name:  ${{ matrix.environment }}
-      url: ${{ env.URL}}
+      url: ${{ vars.URL }}
     strategy:
       fail-fast: false
       matrix:
