fix: trigger yet another helm release

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
     "packages": {
         ".": {
             "release-type": "node",
-            "exclude-paths": ["helm"]
+            "exclude-paths": ["helm", ".github", ".lando"]
         },
         "helm": {
             "package-name": "pilcrow-helm",
