--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,10 +15,8 @@ jobs:
         if: ${{ steps.release.outputs.releases_created }}
         with:
           fetch-depth: 0
-      - name: Setup Helm
-        uses: azure/setup-helm@v4.3.0
       - if: ${{ steps.release.outputs.helm--release_created }}
-        uses: bsord/helm-push@v4.2.0
+        uses: wreality/helm-push@v1
         with:
           useOCIRegistry: true
           registry-url: oci://ghcr.io/${{ github.repository }}
