--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,7 +19,7 @@ jobs:
         uses: wreality/helm-push@v1
         with:
           useOCIRegistry: true
-          registry-url: oci://ghcr.io/${{ github.repository }}
+          registry-url: oci://ghcr.io/${{ github.repository_owner }}
           username: ${{ github.actor }}
           access-token: ${{ secrets.REPO_TOKEN }}
           update-dependencies: true
