--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -146,6 +146,7 @@ jobs:
         id: build-image
         with:
           target: release
+          token: ${{ secrets.REPO_TOKEN }}
 
   deployments:
     runs-on: ubuntu-24.04
