--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -80,6 +80,7 @@ runs:
               WEB_CACHE_TO: ${{ steps.cache-web.outputs.cache-to }}
           with:
               targets: ${{ inputs.target }}
+              allow: fs.write=/tmp
               files: |
                   ./docker-bake.hcl
                   ${{ steps.docker-meta-fpm.outputs.bake-file }}
