--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -71,7 +71,7 @@ runs:
           with:
               image: ghcr.io/${{ env.REPO }}/cache/fpm
         - name: Build and push
-          uses: docker/bake-action@v4
+          uses: docker/bake-action@v6.8.0
           if: ${{ steps.docker-meta-fpm.outputs.tags != ''}}
           env:
               FPM_CACHE_FROM: ${{ steps.cache-fpm.outputs.cache-from }}
@@ -80,7 +80,7 @@ runs:
               WEB_CACHE_TO: ${{ steps.cache-web.outputs.cache-to }}
           with:
               targets: ${{ inputs.target }}
-              allow: fs.write=/tmp
+              allow: fs.write=*
               files: |
                   ./docker-bake.hcl
                   ${{ steps.docker-meta-fpm.outputs.bake-file }}
