--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,6 +56,8 @@ jobs:
       - uses: ./.github/actions/build-image
         id: build-image
         name: Build Image
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
   backend-unit-test:
     name: Backend / Unit Test
     needs: [build-images]
