--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -64,6 +64,11 @@ runs:
           id: docker-cache
           with:
               image: ${{ env.DOCKER_IMAGE_CACHE }}
+        - name: Upload Docker Cache Bake File
+          uses: actions/upload-artifact@v4
+          with:
+              name: docker-cache-bake-file
+              path: ${{ steps.docker-cache-outputs.bake-file }}
         - name: Build and push
           id: docker-bake
           uses: docker/bake-action@v6.8.0
