--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -68,7 +68,7 @@ runs:
           uses: actions/upload-artifact@v4
           with:
               name: docker-cache-bake-file
-              path: ${{ steps.docker-cache-outputs.bake-file }}
+              path: ${{ steps.docker-cache.outputs.bake-file }}
         - name: Build and push
           id: docker-bake
           uses: docker/bake-action@v6.8.0
