--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -28,15 +28,17 @@ runs:
         VERSION=$(git describe --tags)
         VERSION_URL=https://github.com/MESH-Research/Pilcrow/commits/${GITHUB_SHA}
         VERSION_DATE=$(git show -s --format=%cI ${GITHUB_SHA})
+        REPO=${GITHUB_REPOSITORY,,}
+        DOCKER_IMAGE_CACHE=ghcr.io/${REPO}/cache/__service__
         echo "VERSION=${VERSION}" >> "$GITHUB_ENV"
         echo "VERSION_URL=${VERSION_URL}" >> "$GITHUB_ENV"
         echo "VERSION_DATE=${VERSION_DATE}" >> "$GITHUB_ENV"
-        echo "REPO=${GITHUB_REPOSITORY,,}" >> "$GITHUB_ENV"
-        echo "DOCKER_IMAGE_CACHE=ghcr.io/${{ env.REPO }}/cache/__service__" >> "$GITHUB_ENV"
+        echo "REPO=${REPO}" >> "$GITHUB_ENV"
+        echo "DOCKER_IMAGE_CACHE=${DOCKER_IMAGE_CACHE}" >> "$GITHUB_ENV"
         if [ "${{ inputs.target }}" == "release" ]; then
-            echo "IMAGE_BASE=${{ env.DOCKER_IMAGE_CACHE }}" >> "$GITHUB_ENV"
+            echo "IMAGE_BASE=${DOCKER_IMAGE_CACHE}" >> "$GITHUB_ENV"
         else
-            echo "IMAGE_BASE=ghcr.io/${{ env.REPO }}/__service__" >> "$GITHUB_ENV"
+            echo "IMAGE_BASE=ghcr.io/${REPO}/__service__" >> "$GITHUB_ENV"
         fi
     - name: Replace version in source files
       shell: bash
