--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -66,11 +66,14 @@ runs:
       id: docker-cache
       with:
         image: ${{ env.DOCKER_IMAGE_CACHE }}
-    - name: Upload Docker Cache Bake File
+    - name: Upload Docker Bake Files
       uses: actions/upload-artifact@v4
       with:
         name: docker-cache-bake-file
-        path: ${{ steps.docker-cache.outputs.bake-file }}
+        path: |
+          ${{ steps.docker-cache.outputs.bake-file }}
+          ${{ steps.docker-meta.outputs.bake-file }}
+          ./docker-bake.hcl
     - name: Build and push
       id: docker-bake
       uses: docker/bake-action@v6.8.0
