ci: fix image name extraction

--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -111,7 +111,7 @@ runs:
         METADATA: ${{ steps.docker-bake.outputs.metadata }}
       run: |
         echo ${{ inputs.token }} | oras login --username wreality --password-stdin ghcr.io
-        image="$(echo $METADATA | jq -r '.web."image.name"')"
+        image="$(echo $METADATA | jq -r 'to_entries[] | select(.key|endswith("web")).value."image.name"')"
         image="${image%,*}"
         oras attach $image \
           --artifact-type application/vnd.mesh.frontend-bundle.v1+tar \
