--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Attach helm chart to release
         if: ${{ steps.release.outputs.helm--release_created }}
         run: |
-          gh release upload ${{ steps.release.outputs.helm--tag_name }} /github/workspace/${{ steps.helm-push.outputs.chart-package }}
+          gh release upload ${{ steps.release.outputs.helm--tag_name }} ${{ github.workspace }}/${{ steps.helm-push.outputs.chart-package }}
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
       - name: Login to Github Packages
