--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Upload frontend build artifacts to release
         if: ${{ steps.release.outputs.release_created }}
         run: |
-          gh release upload ${{ steps.release.outputs.version }} \
+          gh release upload ${{ steps.release.outputs.tag_name }} \
             ${{ steps.build-image.outputs.frontend_bundle }}
       - name: Update appVersion in helm chart
         if: ${{ steps.release.outputs.release_created }}
