--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,10 @@ jobs:
     outputs:
       version: ${{ steps.build-image.outputs.version }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
       - name: Login to Github Packages
         uses: docker/login-action@v2
         with:
