--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: true
           ref: ${{ steps.release.outputs.tag_name }}
           token: ${{ secrets.REPO_TOKEN }}
       - name: Login to Github Packages
