--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -109,8 +109,8 @@ runs:
       run: |
         WEB_IMAGE="$(echo $METADATA | jq -r 'to_entries[] | select(.key|endswith("web")).value."image.name"')"
         FPM_IMAGE="$(echo $METADATA | jq -r 'to_entries[] | select(.key|endswith("fpm")).value."image.name"')"
-        echo "WEB_IMAGE=${WEB_IMAGE%,*}" >> "$GITHUB_ENV"
-        echo "FPM_IMAGE=${FPM_IMAGE%,*}" >> "$GITHUB_ENV"
+        echo "WEB_IMAGE=${WEB_IMAGE%%,*}" >> "$GITHUB_ENV"
+        echo "FPM_IMAGE=${FPM_IMAGE%%,*}" >> "$GITHUB_ENV"
     - name: Compress & Tar Frontend Assets
       id: frontend-bundle
       if: ${{ env.WEB_IMAGE != '' }}
