--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -34,7 +34,7 @@ jobs:
           target: release
           token: ${{ secrets.REPO_TOKEN }}
       - name: Upload frontend build artifacts to release if a tag is pushed
-        if: github.event_name == 'push tag'
+        if: startsWith(github.ref, 'refs/tags')
         run: |
           gh release upload ${{ github.ref_name }} \
             ${{ steps.build-image.outputs.frontend_bundle }}
