--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -35,6 +35,8 @@ jobs:
           token: ${{ secrets.REPO_TOKEN }}
       - name: Upload frontend build artifacts to release if a tag is pushed
         if: startsWith(github.ref, 'refs/tags')
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
             ${{ steps.build-image.outputs.frontend_bundle }}
