--- a/renovate.json
+++ b/renovate.json
@@ -54,14 +54,14 @@
             "matchManagers": ["composer"],
             "matchFileNames": ["backend/**"],
             "matchDepTypes": ["require"],
-            "matchUpdateTypes": ["minor", "patch"]
+            "matchUpdateTypes": ["minor", "patch"],
             "extends": [":semanticCommitScope(api/deps)"]
 }
         },
         {
             "groupName": "docs",
             "groupSlug": "docs",
-            "extends": [":semanticCommitTypeAll(docs)"]
+            "extends": [":semanticCommitTypeAll(docs)"],
 }
             "matchFileNames": ["docs/**"]
         }
