--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,10 @@
         "config:recommended"
     ],
     "packageRules": [
+        /**
+         * These deps aren't well covered by automated testing and are held back
+         * until they get approved in the dependency dashboard.
+         **/
         {
             "description": "Docker deps are held back currently to requiee dep daahboard approval",
             "matchManagers": [
@@ -13,34 +17,51 @@
             ],
             "dependencyDashboardApproval": true
         },
+        /**
+         * Development dependencies get grouped together since they commonly require
+         * similar testing.
+         **/
         {
-            "groupName": "container",
-            "groupSlug": "container",
-            "matchManagers": ["dockerfile"]
-        },
-        {
-            "groupName": "dev-deps",
+            "groupName": "development dependencies",
             "matchDepTypes": ["devDependencies","require-dev"]
         },
+        /**
+         * backend and client are well covered in automated testing.  We'll attempt to auto merge
+         * updates that are patches.
+         **/
         {
-            "description": "npm and composer deps are well covered in automated testing. if patch versions pass ci, we'll automerge",
-            "matchUpdateTypes": [
-                "patch"
-            ],
+            "matchUpdateTypes": ["patch"],
             "matchCurrentVersion": "!/^0/",
             "matchFileNames": ["backend/**", "client/**"],
             "matchManagers": ["npm","composer"],
             "automerge": true,
             "automergeType": "branch"
         },
+        /**
+         * Group client npm updates for patch and minor
+         **/
         {
-            "description": "group frontend npm deps for PR approval",
-            "groupName": "client",
+            "groupName": "client dependencies",
             "matchFileNames": ["client/**"],
             "matchManagers": ["npm"],
             "matchDepTypes": ["dependencies"],
-            "matchUpdateTypes": ["minor", "patch"]
+            "matchUpdateTypes": ["minor", "patch"],
+            "extends": [":semanticCommitScope(client/deps)"]
         },
+        /**
+         * Group backend composer updates for patch and minor
+         **/
+        {
+            "groupName": "api",
+            "matchManagers": ["composer"],
+            "matchFileNames": ["backend/**"],
+            "matchDepTypes": ["require"],
+            "matchUpdateTypes": ["minor", "patch"],
+            "extends": [":semanticCommitScope(api/deps)"]
+        },
+        /**
+         * Group major updates
+         **/
         {
             "groupName": "major-upgrades",
             "matchFileNames": ["client/**", "backend/**"],
@@ -49,17 +70,15 @@
             "matchUpdateTypes": ["major"]
         },
         {
-            "groupName": "api",
-            "groupSlug": "api",
-            "matchManagers": ["composer"],
-            "matchFileNames": ["backend/**"],
-            "matchDepTypes": ["require"],
-            "matchUpdateTypes": ["minor", "patch"],
-            "extends": [":semanticCommitScope(api/deps)"]
+            "groupName": "container",
+            "matchManagers": ["dockerfile"]
+        },
+        {
+            "groupName": "helm dependencies",
+            "matchFileNames": ["helm/**"],
         },
         {
             "groupName": "docs",
-            "groupSlug": "docs",
             "commitMessagePrefix": "docs(deps):",
             "matchFileNames": ["docs/**"]
         }
